--- a/model.ipynb
+++ b/model.ipynb
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -325,15 +325,7 @@
     "id": "1rasqjnO6mAq",
     "outputId": "89ba6bb9-d3ed-4761-c473-f38c9d7a75ba"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "from pydub import AudioSegment\n",
@@ -361,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -411,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -487,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -512,14 +504,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:Large dropout rate: 0.8 (>0.5). In TensorFlow 2.x, dropout() uses dropout rate instead of keep_prob. Please ensure that this is intended.\n",
       "Model: \"model_2\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
@@ -574,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -586,44 +577,15 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:Large dropout rate: 0.8 (>0.5). In TensorFlow 2.x, dropout() uses dropout rate instead of keep_prob. Please ensure that this is intended.\n",
-      "Model: \"model_2\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "input_2 (InputLayer)         (None, 5490, 129)         0         \n",
-      "_________________________________________________________________\n",
-      "conv1d_2 (Conv1D)            (None, 1369, 196)         379456    \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_4 (Batch (None, 1369, 196)         784       \n",
-      "_________________________________________________________________\n",
-      "activation_2 (Activation)    (None, 1369, 196)         0         \n",
-      "_________________________________________________________________\n",
-      "dropout_5 (Dropout)          (None, 1369, 196)         0         \n",
-      "_________________________________________________________________\n",
-      "gru_3 (GRU)                  (None, 1369, 128)         124800    \n",
-      "_________________________________________________________________\n",
-      "dropout_6 (Dropout)          (None, 1369, 128)         0         \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_5 (Batch (None, 1369, 128)         512       \n",
-      "_________________________________________________________________\n",
-      "gru_4 (GRU)                  (None, 1369, 128)         98688     \n",
-      "_________________________________________________________________\n",
-      "dropout_7 (Dropout)          (None, 1369, 128)         0         \n",
-      "_________________________________________________________________\n",
-      "batch_normalization_6 (Batch (None, 1369, 128)         512       \n",
-      "_________________________________________________________________\n",
-      "dropout_8 (Dropout)          (None, 1369, 128)         0         \n",
-      "_________________________________________________________________\n",
-      "time_distributed_2 (TimeDist (None, 1369, 1)           129       \n",
-      "=================================================================\n",
-      "Total params: 604,881\n",
-      "Trainable params: 603,977\n",
-      "Non-trainable params: 904\n",
-      "_________________________________________________________________\n"
+     "ename": "TypeError",
+     "evalue": "__call__() missing 1 required positional argument: 'inputs'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-12ea76760e1a>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmodel\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_shape\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mTx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_freq\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.7/site-packages/keras/backend/tensorflow_backend.py\u001b[0m in \u001b[0;36msymbolic_fn_wrapper\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m     73\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0m_SYMBOLIC_SCOPE\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     74\u001b[0m             \u001b[0;32mwith\u001b[0m \u001b[0mget_graph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_default\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 75\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     76\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     77\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mfunc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: __call__() missing 1 required positional argument: 'inputs'"
      ]
     }
    ],
@@ -664,8 +626,19 @@
     "    Y -- Y data to train on\n",
     "    \"\"\"\n",
     "    \n",
+    "    METRICS = [\n",
+    "      keras.metrics.TruePositives(name='tp'),\n",
+    "      keras.metrics.FalsePositives(name='fp'),\n",
+    "      keras.metrics.TrueNegatives(name='tn'),\n",
+    "      keras.metrics.FalseNegatives(name='fn'), \n",
+    "      keras.metrics.BinaryAccuracy(name='accuracy'),\n",
+    "      keras.metrics.Precision(name='precision'),\n",
+    "      keras.metrics.Recall(name='recall'),\n",
+    "      keras.metrics.AUC(name='auc'),\n",
+    "    ]\n",
+    "    \n",
     "    opt = Adam(lr=0.0001, beta_1=0.9, beta_2=0.999, decay=0.01)\n",
-    "    model.compile(loss='binary_crossentropy', optimizer=opt, metrics=['accuracy'])\n",
+    "    model.compile(loss='binary_crossentropy', optimizer=opt, metrics= METRICS)\n",
     "    \n",
     "    model.fit(X, Y, batch_size=5, epochs=1)"
    ]
@@ -754,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -770,7 +743,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X: (1000, 5490, 129) Y: (1000, 1369, 1)\n"
+      "X: (50, 5490, 129) Y: (50, 1369, 1)\n"
      ]
     }
    ],
@@ -781,14 +754,14 @@
     "    loss, acc = model.evaluate(X_dev, Y_dev)\n",
     "    print(\"Dev set accuracy = \", acc)\n",
     "\n",
-    "X_dev = np.load(REPO_DIRECTORY + \"X_3.npy\")\n",
-    "Y_dev = np.load(REPO_DIRECTORY + \"Y_3.npy\")\n",
+    "X_dev = np.load(REPO_DIRECTORY + \"/training_data/dev_set/X_dev.npy\")\n",
+    "Y_dev = np.load(REPO_DIRECTORY + \"/training_data/dev_set/Y_dev.npy\")\n",
     "print(\"X: {} Y: {}\".format(X_dev.shape, Y_dev.shape))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -803,8 +776,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100/100 [==============================] - 16s 162ms/step\n",
-      "Dev set accuracy =  0.9626296758651733\n"
+      "50/50 [==============================] - 8s 164ms/step\n",
+      "Dev set accuracy =  0.9633309245109558\n"
      ]
     }
    ],
