Change learning rate and epoch

--- a/model.ipynb
+++ b/model.ipynb
@@ -733,7 +733,7 @@
         "    opt = Adam(lr=0.001, beta_1=0.9, beta_2=0.999, decay=0.01)\n",
         "    model.compile(loss='binary_crossentropy', optimizer=opt, metrics=['accuracy'])\n",
         "    \n",
-        "    history = model.fit(X, Y, batch_size=5, epochs=10, validation_data=(X_dev, Y_dev))\n",
+        "    history = model.fit(X, Y, batch_size=50, epochs=100, validation_data=(X_dev, Y_dev))\n",
         "    return history"
       ],
       "execution_count": 0,
@@ -744,23 +744,23 @@
       "metadata": {
         "id": "uHf7t1TjLvnl",
         "colab_type": "code",
-        "outputId": "345c1f85-2cc3-4a7d-afce-cee26b4d36b0",
+        "outputId": "e99ec98d-7a05-47b8-8a0b-3de8836e73a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "X = np.load(DATA_PATH + \"XY_test/X_halfratio_test.npy\")\n",
-        "Y = np.load(DATA_PATH + \"XY_test/Y_halfratio_test.npy\")\n",
+        "X = np.load(DATA_PATH + \"XY_Train/X_halfratio_1.npy\")\n",
+        "Y = np.load(DATA_PATH + \"XY_Train/Y_halfratio_1.npy\")\n",
         "print(\"X: {} Y: {}\".format(X.shape, Y.shape))"
       ],
-      "execution_count": 13,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "X: (50, 5490, 129) Y: (50, 1369, 1)\n"
+            "X: (1000, 5490, 129) Y: (1000, 1369, 1)\n"
           ],
           "name": "stdout"
         }
@@ -775,19 +775,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "9b06e510-4547-43d9-9b77-e2cc74c1f35c"
+        "outputId": "435df950-4643-4709-f6d6-97d8d3097ee1"
       },
       "source": [
-        "X_dev = np.load(DATA_PATH + \"XY_dev/cont_X.npy\")\n",
-        "Y_dev = np.load(DATA_PATH + \"XY_dev/cont_Y.npy\")\n",
+        "X_dev = np.load(DATA_PATH + \"XY_dev_synthesised/X_dev.npy\")\n",
+        "Y_dev = np.load(DATA_PATH + \"XY_dev_synthesised/Y_dev.npy\")\n",
         "print(\"X: {} Y: {}\".format(X_dev.shape, Y_dev.shape))"
       ],
-      "execution_count": 23,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "X: (25, 5490, 129) Y: (25, 1369, 1)\n"
+            "X: (300, 5490, 129) Y: (300, 1369, 1)\n"
           ],
           "name": "stdout"
         }
