Update requirements to include Talos and fix bugs

--- a/model.ipynb
+++ b/model.ipynb
@@ -330,6 +330,7 @@
     }
    ],
    "source": [
+    "!pip install talos\n",
     "!pip install -r '/content/filler_detection/requirements.txt'"
    ]
   },
@@ -1858,7 +1859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1876,17 +1877,12 @@
     "    \"\"\"\n",
     "    \n",
     "    model = create_model(input_shape = (Tx, n_freq), output_bias = None)\n",
-    "\n",
-    "#     opt = Adam(lr=params['lr'], beta_1=0.9, beta_2=0.999, decay=0.01)\n",
-    "#     model.compile(loss='binary_crossentropy', optimizer=opt, metrics=METRICS)\n",
-    "    \n",
-    "#     history = model.fit(X, Y, batch_size=50, epochs=100, validation_data=(X_dev, Y_dev))\n",
     "    \n",
     "    opt = Adam(lr=params['lr'], beta_1=params['beta_1'], beta_2=params['beta_2'], decay=params['decay'])\n",
-    "    model.compile(loss='binary_crossentropy', optimizer=opt, metrics=METRICS)\n",
+    "    model.compile(loss='binary_crossentropy', optimizer=opt)\n",
     "    \n",
     "    history = model.fit(X, Y, batch_size=params['batch_size'], epochs=params['epochs'], validation_data=(X_dev, Y_dev))\n",
-    "    return history"
+    "    return history, model"
    ]
   },
   {
@@ -1898,7 +1894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1907,8 +1903,8 @@
     "    'beta_1': [0.5, 1.5, 0.2],\n",
     "    'beta_2': [0.500, 1.500, 0.2],\n",
     "    'decay': [0.005, 0.5, 0.005],\n",
-    "    'batch_size': 50,\n",
-    "    'epochs': 1\n",
+    "    'batch_size': [50],\n",
+    "    'epochs': [10]\n",
     "}"
    ]
   },
@@ -1921,14 +1917,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import talos\n",
+    "\n",
+    "scan_object = talos.Scan(X, Y, x_val=X_dev, y_val=Y_dev, model=hyperparam_optimize, params=params, fraction_limit=0.1, experiment_name='test')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Get Talos data after running hyperparameter optimization..."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python3 -m pip install talos\n",
-    "import talos\n",
-    "\n",
-    "scan_object = talos.Scan(X, Y, x_val=X_dev, y_val=Y_dev, model=hyperparam_optimize, params=params, fraction_limit=0.1, experiment_name='test')"
+    "scan_object.data"
    ]
   }
  ],
