--- a/random_test_sentence_generator.ipynb
+++ b/random_test_sentence_generator.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,13 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_test(num_pos_min, num_pos_max, num_total, debug=False):\n",
     "    \"\"\"\n",
-    "    Creates a randomized s\n",
+    "    Creates a randomized sentence from the Google Speech Commands Dataset\n",
     "    \n",
     "    Arguments:\n",
     "    num_pos_min -- minimum number of positives\n",
@@ -97,23 +97,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6 positives in 15 words\n"
+      "1 positives in 15 words\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "'basically cat basically four basically right happy eight basically bird basically zero no stop basically'"
+       "'off two marvin left yes basically one bed wow right nine tree down eight stop'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
