Updated cut google based dataset

--- a/random_test_sentence_generator.ipynb
+++ b/random_test_sentence_generator.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -110,10 +110,10 @@
     {
      "data": {
       "text/plain": [
-       "'seven one bed two cat yes basically off wow basically three down tree happy basically no on basically go house'"
+       "'four cat on basically eight marvin five bird basically two up off no wow basically zero yes basically left nine'"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
