--- a/create_examples/concatenated_examples.ipynb
+++ b/create_examples/concatenated_examples.ipynb
@@ -30,12 +30,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "POSITIVE_DIRECTORY = \"./raw_data/positive_data/\"\n",
-    "BACKGROUND_DIRECTORY = \"./raw_data/background_data/\"\n",
-    "NEGATIVES_DIRECTORY = \"./raw_data/google_dataset/\"\n",
-    "NEGATIVES_TRUNCATED_DIRECTORY = \"./raw_data/google_dataset_truncated/\"\n",
-    "AUDIO_EXAMPLES_DIRECTORY = \"./audio_examples/\"\n",
-    "AUDIO_IGNORED_EXAMPLES_DIRECTORY = \"./audio_ignored_examples/\"\n",
+    "POSITIVE_DIRECTORY = \"../raw_data/positive_data/\"\n",
+    "BACKGROUND_DIRECTORY = \"../raw_data/background_data/\"\n",
+    "NEGATIVES_DIRECTORY = \"../raw_data/google_dataset/\"\n",
+    "NEGATIVES_TRUNCATED_DIRECTORY = \"../raw_data/google_dataset_truncated/\"\n",
+    "AUDIO_EXAMPLES_DIRECTORY = \"../audio_examples/\"\n",
+    "AUDIO_IGNORED_EXAMPLES_DIRECTORY = \"../audio_ignored_examples/\"\n",
     "\n",
     "POSITIVE_EXAMPLE = \"jh_1.wav\"\n",
     "BACKGROUND_EXAMPLE = \"bg_10.wav\"\n",
