--- a/create_examples/speech_to_text_examples.ipynb
+++ b/create_examples/speech_to_text_examples.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 519,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,9 @@
     "import IPython.display as ipd\n",
     "from pydub import AudioSegment\n",
     "from google.cloud import texttospeech\n",
-    "from essential_generators import DocumentGenerator"
+    "from essential_generators import DocumentGenerator\n",
+    "from scipy.io import wavfile\n",
+    "from scipy import signal"
    ]
   },
   {
@@ -43,12 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 513,
    "metadata": {},
    "outputs": [],
    "source": [
     "BACKGROUND_AUDIONAMES = [name for name in os.listdir(BACKGROUND_DIRECTORY) if name.endswith(\"wav\")]    \n",
-    "POSITIVE_SEGMENT = AudioSegment.from_file(AUDIO_EXAMPLES_DIRECTORY + \"basically.mp3\")\n",
+    "POSITIVE_SEGMENT = AudioSegment.from_file(AUDIO_EXAMPLES_DIRECTORY + \"basically.wav\")\n",
     "gen = DocumentGenerator()"
    ]
   },
@@ -340,11 +342,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 523,
    "metadata": {},
    "outputs": [],
    "source": [
     "def create_X(segment, output_filepath):\n",
+    "    file_handle = segment.export(output_filepath, format=\"wav\")\n",
     "    print(\"File was saved in {}\".format(output_filepath))\n",
     "\n",
     "    sample_rate, samples = wavfile.read(output_filepath)\n",
@@ -354,11 +357,86 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 525,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File was saved in ../audio_ignored_examples/temp.wav\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([    0.  ,    93.75,   187.5 ,   281.25,   375.  ,   468.75,\n",
+       "          562.5 ,   656.25,   750.  ,   843.75,   937.5 ,  1031.25,\n",
+       "         1125.  ,  1218.75,  1312.5 ,  1406.25,  1500.  ,  1593.75,\n",
+       "         1687.5 ,  1781.25,  1875.  ,  1968.75,  2062.5 ,  2156.25,\n",
+       "         2250.  ,  2343.75,  2437.5 ,  2531.25,  2625.  ,  2718.75,\n",
+       "         2812.5 ,  2906.25,  3000.  ,  3093.75,  3187.5 ,  3281.25,\n",
+       "         3375.  ,  3468.75,  3562.5 ,  3656.25,  3750.  ,  3843.75,\n",
+       "         3937.5 ,  4031.25,  4125.  ,  4218.75,  4312.5 ,  4406.25,\n",
+       "         4500.  ,  4593.75,  4687.5 ,  4781.25,  4875.  ,  4968.75,\n",
+       "         5062.5 ,  5156.25,  5250.  ,  5343.75,  5437.5 ,  5531.25,\n",
+       "         5625.  ,  5718.75,  5812.5 ,  5906.25,  6000.  ,  6093.75,\n",
+       "         6187.5 ,  6281.25,  6375.  ,  6468.75,  6562.5 ,  6656.25,\n",
+       "         6750.  ,  6843.75,  6937.5 ,  7031.25,  7125.  ,  7218.75,\n",
+       "         7312.5 ,  7406.25,  7500.  ,  7593.75,  7687.5 ,  7781.25,\n",
+       "         7875.  ,  7968.75,  8062.5 ,  8156.25,  8250.  ,  8343.75,\n",
+       "         8437.5 ,  8531.25,  8625.  ,  8718.75,  8812.5 ,  8906.25,\n",
+       "         9000.  ,  9093.75,  9187.5 ,  9281.25,  9375.  ,  9468.75,\n",
+       "         9562.5 ,  9656.25,  9750.  ,  9843.75,  9937.5 , 10031.25,\n",
+       "        10125.  , 10218.75, 10312.5 , 10406.25, 10500.  , 10593.75,\n",
+       "        10687.5 , 10781.25, 10875.  , 10968.75, 11062.5 , 11156.25,\n",
+       "        11250.  , 11343.75, 11437.5 , 11531.25, 11625.  , 11718.75,\n",
+       "        11812.5 , 11906.25, 12000.  ]),\n",
+       " array([0.00533333, 0.01466667, 0.024     , 0.03333333, 0.04266667,\n",
+       "        0.052     , 0.06133333, 0.07066667, 0.08      , 0.08933333,\n",
+       "        0.09866667, 0.108     , 0.11733333, 0.12666667, 0.136     ,\n",
+       "        0.14533333, 0.15466667, 0.164     , 0.17333333, 0.18266667,\n",
+       "        0.192     , 0.20133333, 0.21066667, 0.22      , 0.22933333,\n",
+       "        0.23866667, 0.248     , 0.25733333, 0.26666667, 0.276     ,\n",
+       "        0.28533333, 0.29466667, 0.304     , 0.31333333, 0.32266667,\n",
+       "        0.332     , 0.34133333, 0.35066667, 0.36      , 0.36933333,\n",
+       "        0.37866667, 0.388     , 0.39733333, 0.40666667, 0.416     ,\n",
+       "        0.42533333, 0.43466667, 0.444     , 0.45333333, 0.46266667,\n",
+       "        0.472     , 0.48133333, 0.49066667, 0.5       , 0.50933333,\n",
+       "        0.51866667, 0.528     , 0.53733333, 0.54666667, 0.556     ,\n",
+       "        0.56533333, 0.57466667, 0.584     , 0.59333333]),\n",
+       " array([[8.2971573e-02, 1.1078154e+00, 1.4115953e+02, ..., 1.7006313e+02,\n",
+       "         3.8094604e+02, 1.7191313e+02],\n",
+       "        [1.0702458e-03, 4.7133246e+02, 1.9356233e+02, ..., 1.6211140e+04,\n",
+       "         1.9220814e+04, 2.0606549e+04],\n",
+       "        [1.9052051e-02, 2.7514065e+03, 3.0394617e+04, ..., 1.1967752e+04,\n",
+       "         4.4828237e+03, 1.6712153e+03],\n",
+       "        ...,\n",
+       "        [2.7647063e-06, 7.5621901e-06, 4.7926342e-06, ..., 1.9431893e-06,\n",
+       "         1.8377542e-06, 9.3768148e-07],\n",
+       "        [4.2810520e-06, 3.7201055e-06, 8.8364377e-06, ..., 1.5675315e-06,\n",
+       "         7.9228590e-07, 4.0289360e-05],\n",
+       "        [1.7488675e-06, 4.9758091e-06, 2.9701780e-06, ..., 3.5989319e-07,\n",
+       "         2.4458501e-05, 2.1477742e-06]], dtype=float32))"
+      ]
+     },
+     "execution_count": 525,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "create_X(POSITIVE_SEGMENT, AUDIO_IGNORED_EXAMPLES_DIRECTORY + \"temp.wav\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "create_X()"
+    "def create_Y(inserted_points):\n",
+    "    "
    ]
   },
   {
@@ -373,6 +451,7 @@
     "    \n",
     "    segment, inserted_points = create_segment(mean_positives)\n",
     "    segment = process_audio(segment)\n",
+    "    frequencies, times, x = create_X(segment)\n",
     "    # segment = overlay_background(segment)\n",
     "    \n",
     "    \n",
