Edit model.ipynb and a .txt

--- a/model.ipynb
+++ b/model.ipynb
@@ -1048,49 +1048,51 @@
    "outputs": [],
    "source": [
     "def plot_history(history):\n",
+    "\n",
+    "    fig, axs = plt.subplots(2,3)\n",
+    "    fig.set_size_inches(15,7.5,forward=True)\n",
+    "    fig.tight_layout(pad=3.0)\n",
+    "\n",
     "    # Plot training & validation accuracy values\n",
-    "    plt.plot(history['accuracy'])\n",
-    "    plt.plot(history['val_accuracy'])\n",
-    "    plt.title('Model accuracy')\n",
-    "    plt.ylabel('Accuracy')\n",
-    "    plt.xlabel('Epoch')\n",
-    "    plt.legend(['Train', 'Val'], loc='upper left')\n",
-    "    plt.show()\n",
+    "    axs[0,0].plot(history['accuracy'])\n",
+    "    axs[0,0].plot(history['val_accuracy'])\n",
+    "    axs[0,0].set_title('Model accuracy')\n",
+    "    axs[0,0].set_ylabel('Accuracy')\n",
+    "    axs[0,0].set_xlabel('Epoch')\n",
+    "    axs[0,0].legend(['Train', 'Val'], loc='upper left')\n",
     "\n",
     "    # Plot training & validation loss values\n",
-    "    plt.plot(history['loss'])\n",
-    "    plt.plot(history['val_loss'])\n",
-    "    plt.title('Model loss')\n",
-    "    plt.ylabel('Loss')\n",
-    "    plt.xlabel('Epoch')\n",
-    "    plt.legend(['Train', 'Val'], loc='upper right')\n",
-    "    plt.show()\n",
+    "    axs[0,1].plot(history['loss'])\n",
+    "    axs[0,1].plot(history['val_loss'])\n",
+    "    axs[0,1].set_title('Model loss')\n",
+    "    axs[0,1].set_ylabel('Loss')\n",
+    "    axs[0,1].set_xlabel('Epoch')\n",
+    "    axs[0,1].legend(['Train', 'Val'], loc='upper right')\n",
     "\n",
     "    # Plot precision loss values\n",
-    "    plt.plot(history['precision'])\n",
-    "    plt.plot(history['val_precision'])\n",
-    "    plt.title('Model Precision')\n",
-    "    plt.ylabel('Precision')\n",
-    "    plt.xlabel('Epoch')\n",
-    "    plt.legend(['Train', 'Val'], loc='upper left')\n",
-    "    plt.show()\n",
+    "    axs[1,0].plot(history['precision'])\n",
+    "    axs[1,0].plot(history['val_precision'])\n",
+    "    axs[1,0].set_title('Model Precision')\n",
+    "    axs[1,0].set_ylabel('Precision')\n",
+    "    axs[1,0].set_xlabel('Epoch')\n",
+    "    axs[1,0].legend(['Train', 'Val'], loc='upper left')\n",
     "\n",
     "    # Plot recall loss values\n",
-    "    plt.plot(history['recall'])\n",
-    "    plt.plot(history['val_recall'])\n",
-    "    plt.title('Model Recall')\n",
-    "    plt.ylabel('Recall')\n",
-    "    plt.xlabel('Epoch')\n",
-    "    plt.legend(['Train', 'Val'], loc='upper right')\n",
-    "    plt.show()\n",
+    "    axs[1,1].plot(history['recall'])\n",
+    "    axs[1,1].plot(history['val_recall'])\n",
+    "    axs[1,1].set_title('Model Recall')\n",
+    "    axs[1,1].set_ylabel('Recall')\n",
+    "    axs[1,1].set_xlabel('Epoch')\n",
+    "    axs[1,1].legend(['Train', 'Val'], loc='upper right')\n",
     "\n",
-    "    plt.plot(history['auc'])\n",
-    "    plt.plot(history['val_auc'])\n",
-    "    plt.title('Model AUC')\n",
-    "    plt.ylabel('AUC')\n",
-    "    plt.xlabel('Epoch')\n",
-    "    plt.legend(['Train', 'Val'], loc='upper right')\n",
-    "    plt.show()"
+    "    axs[0,2].plot(history['auc'])\n",
+    "    axs[0,2].plot(history['val_auc'])\n",
+    "    axs[0,2].set_title('Model AUC')\n",
+    "    axs[0,2].set_ylabel('AUC')\n",
+    "    axs[0,2].set_xlabel('Epoch')\n",
+    "    axs[0,2].legend(['Train', 'Val'], loc='upper right')\n",
+    "\n",
+    "    axs[1,2].set_visible(not axs[1,2].get_visible())"
    ]
   },
   {
@@ -1975,7 +1977,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
